[workspace]
members = [
	".", "ole-pcg",
	"rb-okvs"
]
[workspace.dependencies]
aes = "0.8"
rand = "0.8.5"
aes-prng = "0.2"
rb-okvs = {path = "rb-okvs"}
dmpf = {path = "."}
ole-pcg = {path = "ole-pcg"}


[package]
name = "dmpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
aes = {workspace = true}
rand = {workspace = true}
aes-prng = {workspace = true}
rb-okvs = {workspace = true}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "dpf"
harness = false


[build]
rustflags = ["-C", "target-cpu=native"]