[package]
name = "ole-pcg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {workspace = true}
dmpf = {workspace = true}
aes-prng = {workspace = true}
# rb-okvs = {workspace = true}

[[bench]]
name = "ole_pcg"
harness = false

[dev-dependencies]
criterion = "0.5.1"